<resources>
    <string name="app_name">Fudge</string>
    <string name="title_shoppinglist">Einkaufsliste</string>
    <string name="title_inventorylist">Inventarliste</string>
    <string name="title_addproducts">Produkte hinzufügen</string>
    <string name="title_recipes">Rezeptvorschläge</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="tobuyproductstitle">Zu kaufende Produkte</string>
    <string name="lastboughtproductstitle">Zuletzt gekaufte Produkte</string>
    <string name="edittext_addnewproducttitle">Neues Produkt</string>
    <string name="edittext_addnewproductquantity">Menge</string>
    <string name="button_ProduktHinzufügen">Produkt hinzufügen</string>
    <string name="addnewproducttoshoppinglistlabel">Was möchtest Du einkaufen?</string>
    <string name="numberonerecipelisttitle"># Rezepte heute</string>
    <string name="expiring_product_list_title">Ablaufende Produkte</string>
    <string name="AddButtonShoppinglist">Create new Product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Dies ist keine valide Email.</string>
    <string name="invalid_password">Das Passwort sollte >5 Charakter enthalten.</string>
    <string name="invalid_passwords">Passwörter stimmen nicht überein</string>
    <string name="login_failed">"Der Login ist fehlgeschlagen."</string>
    <string name="register_failed">"Die Registrierung ist fehlgeschlagen."</string>
    <string name="simpel">einfach</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="aktuelle_rezeptvorschl_ge">Beliebteste Rezepte</string>
    <string name="cooking_instructions">Kochanleitung</string>
    <string name="example_sentence">The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog.</string>
    <string name="needed_ingredients_title">Benötigte Zutaten</string>
    <string name="example_description">White Onion, Fennel and Watercress Salad</string>
    <string name="rate_recipe">Bitte bewerte dein Kocherlebnis.</string>
    <string name="rating_value">4.5</string>
    <string name="expires_in">Läuft ab in:</string>
    <string name="expiration_dummy_value">3 Days</string>
    <string name="expiration_dummy_product_name">Tiefkühl Pasta</string>
    <string name="search">Suche</string>
    <string name="more">Weitere</string>
    <string name="content_description_favorite_recipe">Content Description Favorite Recipe</string>
    <string name="content_description_search">Content Description Search</string>
    <string name="content_description_more">Content Description More</string>
    <string name="favorite_recipe">Lieblingsrezepte</string>
    <string name="user_profile">Profil</string>
    <string name="content_description_user_profile">Content Description User Profile</string>
    <string name="title_shopping">Einkauf</string>
    <string name="title_inventory">Inventar</string>
    <string name="title_recipe">Rezepte</string>
    <string name="edit_product">Edit Product</string>
    <string name="export_ingredients_to_shoppinglist">Export Ingredients to Shoppinglist.</string>
    <string name="export_ingredients">Zutaten Exportieren</string>
    <string name="neues_produkt_zum_inventar_hinzuf_gen">Neues Produkt zum Inventar hinzufügen</string>
    <string name="add_new_inventory">Produkt hinzufügen</string>
    <string name="add_product_to_shoppinglist">Hinzufügen</string>
    <string name="search_hint">Bitte gib ein Suchwort ein.</string>
    <string name="produkt_bearbeiten">Produkt Bearbeiten.</string>
    <string name="content_description_edit_product">Content Description Edit Product.</string>
    <string name="greetings">Hi,</string>
    <string name="user_name">James</string>
    <string name="recipe_filter">Meine Rezeptfilter</string>
    <string name="profile_settings">Profil Einstellungen</string>
    <string name="pushbenachrichtigungen_erlauben">Pushbenachrichtigungen erlauben</string>
    <string name="e_mail_title">Mail:</string>
    <string name="password">Passwort</string>
    <string name="password_string">*******</string>
    <string name="profil_bearbeiten">Profil Bearbeiten</string>
    <string name="register">Registrierung</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_hint">******</string>
    <string name="scan_product_code">Oder Barcode einscannen?</string>
    <string name="neues_produkt_hinzuf_gen">Erstelle ein neues Produkt</string>
    <string name="ablaufdatum">Ablaufdatum</string>
    <string name="hint_hersteller">Hersteller</string>
    <string name="produktname">Produktname</string>
    <string name="Produkttyp">Produkttyp</string>
    <string name="dummy_text">5.0</string>
    <string name="dummy_text_min">30 Min.</string>
    <string name="dummy_text_kcal">128 Kcal</string>
    <string name="add_food_preferences_to_user_profile">Add Food Preferences to User Profile.</string>
    <string name="show_more">Mehr</string>
    <string name="exp_date">22.02.2022</string>
    <string name="expires_soon">expires soon</string>
    <string name="button_share_ingredients">Zutaten Exportieren</string>
    <string name="add_to_shoppinglist_title">Möchtest Du fehlende Zutaten deiner Einkaufsliste hinzufügen?</string>
    <string name="choose_producttype">Wähle Produkttyp</string>
    <string name="menge">Menge</string>
    <string name="nutritionvalues">Nährwerte</string>
    <string name="weitere_anzeigen">Weitere anzeigen</string>
    <string name="create_new_product">Create new Product</string>
    <string name="pizza">Pizza</string>
    <string name="_3">3</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
</resources>