<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:padding="16dp"
    tools:context="ui.inventorylist.AddProductToInventoryFragment">

    <TextView
        android:id="@+id/addProductToInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="@dimen/large_text_margin"
        android:layout_marginEnd="@dimen/large_text_margin"
        android:layout_marginBottom="@dimen/large_text_margin"
        android:text="@string/neues_produkt_hinzuf_gen"
        android:textStyle="bold"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_addnewproducttitle_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/input_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/small_text_margin"
        android:hint="@string/produktname"
        android:autofillHints="@string/produktname"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/addProductToInventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:id="@+id/drop_down_add_new_product_labels_inventory_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp"
        android:layout_weight=".28"
        android:padding="@dimen/small_text_margin"
        android:background="@drawable/drop_down_spinner_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproducttitle_inventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/drop_down_add_new_product_labels_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_text_margin"
            android:layout_marginEnd="@dimen/medium_text_margin"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:autofillHints="Bitte wähle aus"
            android:spinnerMode="dropdown"
            android:hint="@string/Produkttyp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="@dimen/medium_text_margin"
            android:layout_marginEnd="@dimen/medium_text_margin"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:contentDescription="@string/choose_producttype" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/input_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/small_text_margin"
        android:id="@+id/edit_text_addnewproductquantity_inventory"
        android:hint="@string/menge"
        app:layout_constraintTop_toBottomOf="@id/drop_down_add_new_product_labels_inventory_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/menge"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_text_add_new_product_expiration_date_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/input_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/small_text_margin"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/ablaufdatum"
        app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproductquantity_inventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/ablaufdatum"
        android:inputType="date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/input_bg"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/small_text_margin"
        android:id="@+id/edit_text_addnewproductManufacturer_inventory"
        android:hint="@string/hint_hersteller"
        app:layout_constraintTop_toBottomOf="@id/edit_text_add_new_product_expiration_date_inventory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@string/hint_hersteller"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_addnewproductNutritionvalue_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/nutritionvalues"
        android:padding="@dimen/small_text_margin"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproductManufacturer_inventory"
        android:autofillHints="@string/nutritionvalues"
        android:inputType="text" />

    <Button
        android:id="@+id/button_scan_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/scan_product_code"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_addnewproductNutritionvalue_inventory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_addnewproductNutritionvalue_inventory"
        app:layout_constraintTop_toBottomOf="@id/edit_text_addnewproductNutritionvalue_inventory" />

    <Button
        android:id="@+id/button_enteraddproducttoinventorylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:text="@string/button_ProduktHinzufügen"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scan_product" />

</androidx.constraintlayout.widget.ConstraintLayout>