<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".RegisterActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/app_icon_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/medium_text_margin"
        layout="@layout/app_logo_view"/>

    <TextView
        android:id="@+id/register_user"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/medium_text_margin"
        app:layout_constraintVertical_bias="0.13"
        app:layout_constraintTop_toBottomOf="@id/app_icon_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="36sp"
        android:text="@string/register"/>

    <EditText
        android:id="@+id/inputFirstName"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:inputType="textPersonName"
        android:hint="@string/vorname"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"/>

    <EditText
        android:id="@+id/inputLastName"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/inputFirstName"
        app:layout_constraintEnd_toEndOf="@+id/inputFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstName"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:inputType="textPersonName"
        android:hint="@string/nachname"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/inputLastName"
        app:layout_constraintEnd_toEndOf="@+id/inputLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputLastName"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:background="@drawable/input_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        android:hint="******"
        android:ems="10"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword"
        android:text="Registrieren"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/alreadyHaveAccount"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        android:text="Hast Du schon einen Account?"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        android:layout_marginTop="16dp" />

    <ProgressBar
        android:id="@+id/loadingRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>